fixes universal spacing

--- a/web/src/components/about.module.css
+++ b/web/src/components/about.module.css
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 2em;
+  margin-top: 32px;
   @media (min-width: 800px) {
     flex-direction: row;
     margin-bottom: 6em;
